Fix letter-spacing

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -60,6 +60,7 @@ input {
   text-align: center;
   padding: 10% 0 30px 0;
   letter-spacing: 22px;
+  margin-right: -22px;
 }
 .nav {
   width: 700px;
